--- a/sass/components/_titles.scss
+++ b/sass/components/_titles.scss
@@ -1,12 +1,25 @@
+// .about-title,
+// .team-title,
+// .section-title {
+//   font-style: normal;
+//   font-weight: 700;
+//   font-size: 36px;
+//   line-height: 1.17;
+//   text-align: center;
+//   letter-spacing: 0.03em;
+//   color: var(--tittle-text-color);
+//   margin-bottom: 50px;
+// }
+
 .about-title,
 .team-title,
 .section-title {
   font-style: normal;
   font-weight: 700;
-  font-size: 36px;
-  line-height: 1.17;
+  font-size: 28px;
+  line-height: 1.8;
   text-align: center;
   letter-spacing: 0.03em;
   color: var(--tittle-text-color);
-  margin-bottom: 50px;
+  margin-bottom: 30px;
 }
