--- a/sass/layout/_employees.scss
+++ b/sass/layout/_employees.scss
@@ -1,20 +1,21 @@
 .employees {
   background-color: #f5f4fa;
-  padding-top: 94px;
-  padding-bottom: 94px;
+  padding-top: 60px;
+  padding-bottom: 60px;
 }
 
 .teammates-items {
-  display: flex;
-  justify-content: space-between;
+  // display: flex;
+  // justify-content: space-between;
   margin: 0;
   &__list {
+    margin-bottom: 30px;
     background-color: var(--primary-bg-color);
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
       0px 2px 1px rgba(0, 0, 0, 0.2);
-    &:not(:last-child) {
-      margin-right: 30px;
-    }
+    // &:not(:last-child) {
+    //   margin-right: 30px;
+    // }
   }
 }
 
@@ -43,7 +44,8 @@
 .teammate-soc {
   display: flex;
   justify-content: center;
-  padding-bottom: 30px;
+  // padding-bottom: 30px;
+  padding-bottom: 24px;
   &__item {
     width: 44px;
     height: 44px;
