--- a/sass/layout/_subscribe.scss
+++ b/sass/layout/_subscribe.scss
@@ -1,5 +1,5 @@
 .subscribe {
-  margin-left: 93px;
+  // margin-left: 93px;
   &__title {
     display: block;
     align-items: center;
@@ -17,15 +17,15 @@
 
 .send-icon {
   position: absolute;
-  right: 28px;
+  right: 156px;
   top: 50%;
   transform: translateY(-50%);
 }
 
 .form {
-  display: flex;
+  // display: flex;
   &__input {
-    width: 358px;
+    width: 100%;
     height: 50px;
     margin-right: 12px;
     padding: 15px 16px;
@@ -42,3 +42,48 @@
     color: rgba(255, 255, 255, 0.6);
   }
 }
+
+// .subscribe {
+//   margin-left: 93px;
+//   &__title {
+//     display: block;
+//     align-items: center;
+//     justify-content: flex-start;
+
+//     margin-bottom: 10px;
+//     font-weight: 700;
+//     font-size: 14px;
+//     line-height: 1.14;
+//     letter-spacing: 0.03em;
+//     text-transform: uppercase;
+//     color: var(--primary-bg-color);
+//   }
+// }
+
+// .send-icon {
+//   position: absolute;
+//   right: 28px;
+//   top: 50%;
+//   transform: translateY(-50%);
+// }
+
+// .form {
+//   display: flex;
+//   &__input {
+//     width: 358px;
+//     height: 50px;
+//     margin-right: 12px;
+//     padding: 15px 16px;
+
+//     background: transparent;
+//     border: 1px solid rgba(255, 255, 255, 0.3);
+//     border-radius: 4px;
+//     outline: transparent;
+
+//     font-weight: 400;
+//     font-size: 16px;
+//     line-height: 1.25;
+//     letter-spacing: 0.03em;
+//     color: rgba(255, 255, 255, 0.6);
+//   }
+// }
