--- a/sass/layout/_logo.scss
+++ b/sass/layout/_logo.scss
@@ -3,11 +3,12 @@
   font-style: normal;
   font-weight: 700;
   color: #000000;
-  font-size: 26px;
-  line-height: 1.19;
+  font-size: 24px;
+  line-height: 1.17;
   letter-spacing: 0.03em;
+  text-align: center;
 
-  margin-right: 93px;
+  // margin-right: 93px;
 }
 
 .logo-part {
@@ -20,3 +21,26 @@
   background-color: #2f303a;
   letter-spacing: 0.03em;
 }
+
+// .logo {
+//   font-family: "Raleway", sans-serif;
+//   font-style: normal;
+//   font-weight: 700;
+//   color: #000000;
+//   font-size: 26px;
+//   line-height: 1.19;
+//   letter-spacing: 0.03em;
+
+//   margin-right: 93px;
+// }
+
+// .logo-part {
+//   color: var(--accent-color);
+//   letter-spacing: 0.03em;
+// }
+
+// .footer-logo {
+//   color: #ffffff;
+//   background-color: #2f303a;
+//   letter-spacing: 0.03em;
+// }
