--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -26,6 +26,10 @@
   }
 }
 
+// .subscribe-btn {
+//   display: flex;
+// }
+
 .form__button-wrap {
   display: flex;
   flex-direction: row-reverse;
@@ -70,3 +74,76 @@
       0px 2px 2px rgba(0, 0, 0, 0.12);
   }
 }
+
+// .button-title {
+//   font-family: inherit;
+//   font-style: normal;
+//   font-weight: 700;
+//   font-size: 16px;
+//   line-height: 1.88;
+//   display: flex;
+//   align-items: center;
+//   text-align: center;
+//   letter-spacing: 0.06em;
+//   cursor: pointer;
+//   color: #ffffff;
+//   background-color: #2196f3;
+
+//   min-width: 200px;
+//   height: 50px;
+//   padding: 10px 32px;
+//   margin: auto;
+//   border-radius: 4px;
+//   border: 0;
+
+//   &:hover,
+//   &:focus {
+//     opacity: 0.9;
+//     transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+//   }
+// }
+
+// .form__button-wrap {
+//   display: flex;
+//   flex-direction: row-reverse;
+//   position: relative;
+// }
+
+// .modal-button {
+//   display: block;
+//   margin: 0 auto;
+//   margin-top: 30px;
+//   padding: 10px 55px;
+// }
+
+// .menu-list__menu-btn {
+//   font-family: inherit;
+//   font-weight: 500;
+//   font-size: 16px;
+//   line-height: 1.62;
+//   cursor: pointer;
+//   letter-spacing: 0.03em;
+//   color: var(--tittle-text-color);
+//   background: #f5f4fa;
+
+//   padding: 6px 22px;
+//   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+//   & {
+//     border-radius: 4px;
+//     border: transparent;
+//   }
+
+//   &:hover,
+//   &:focus,
+//   & .current {
+//     color: #ffffff;
+//     background-color: #2196f3;
+//   }
+
+//   &:hover,
+//   &:focus {
+//     box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+//       0px 2px 2px rgba(0, 0, 0, 0.12);
+//   }
+// }
