--- a/sass/components/_container.scss
+++ b/sass/components/_container.scss
@@ -6,4 +6,10 @@
   @media screen and (min-width: 480px) {
     max-width: 480px;
   }
+  @media screen and (min-width: 768px) {
+    max-width: 768px;
+  }
+  @media screen and (min-width: 1200px) {
+    max-width: 1200px;
+  }
 }
