--- a/sass/layout/_clients.scss
+++ b/sass/layout/_clients.scss
@@ -6,11 +6,22 @@
 .customer {
   display: flex;
   flex-wrap: wrap;
+  justify-content: center;
   gap: 30px;
   &__item {
+    width: 100%;
     flex-basis: calc((100% - 2 * 30px) / 2);
+    @media screen and (min-width: 768px) {
+      max-width: 768px;
+      flex-basis: calc((100% - 3 * 30px) / 3);
+    }
   }
   &__icon {
+    @media screen and (min-width: 768px) {
+      max-width: 768px;
+      width: 226px;
+    }
+
     display: flex;
     justify-content: center;
     align-items: center;
