--- a/sass/layout/_employees.scss
+++ b/sass/layout/_employees.scss
@@ -5,14 +5,26 @@
 }
 
 .teammates-items {
-  // display: flex;
-  // justify-content: space-between;
+  @media screen and (min-width: 768px) {
+    max-width: 768px;
+
+    display: flex;
+    flex-wrap: wrap;
+    gap: 30px;
+    justify-content: center;
+  }
   margin: 0;
+
   &__list {
     margin-bottom: 30px;
     background-color: var(--primary-bg-color);
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
       0px 2px 1px rgba(0, 0, 0, 0.2);
+
+    @media screen and (min-width: 768px) {
+      width: calc((100% - 2 * 30px) / 2);
+    }
+
     // &:not(:last-child) {
     //   margin-right: 30px;
     // }
@@ -74,3 +86,78 @@
 .employees-soc-icon {
   fill: currentColor;
 }
+
+// .employees {
+//   background-color: #f5f4fa;
+//   padding-top: 94px;
+//   padding-bottom: 94px;
+// }
+
+// .teammates-items {
+//   display: flex;
+//   justify-content: space-between;
+//   margin: 0;
+//   &__list {
+//     background-color: var(--primary-bg-color);
+//     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+//       0px 2px 1px rgba(0, 0, 0, 0.2);
+//     &:not(:last-child) {
+//       margin-right: 30px;
+//     }
+//   }
+// }
+
+// .caption {
+//   font-weight: 500;
+//   font-size: 16px;
+//   line-height: 1.19;
+//   letter-spacing: 0.03em;
+//   color: var(--tittle-text-color);
+//   margin-bottom: 10px;
+// }
+
+// .job-title {
+//   font-size: 16px;
+//   line-height: 1.19;
+//   letter-spacing: 0.03em;
+//   margin-bottom: 16px;
+// }
+
+// .caption-job {
+//   text-align: center;
+//   padding-top: 30px;
+//   /* padding-bottom: 30px; */
+// }
+
+// .teammate-soc {
+//   display: flex;
+//   justify-content: center;
+//   padding-bottom: 30px;
+//   &__item {
+//     width: 44px;
+//     height: 44px;
+//     margin-left: 10px;
+//     &:first-child {
+//       margin-left: 0;
+//     }
+//   }
+//   &__link {
+//     display: flex;
+//     align-items: center;
+//     justify-content: center;
+//     width: 100%;
+//     height: 100%;
+//     border-radius: 50%;
+//     color: #afb1b8;
+//     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+//     &:hover,
+//     &:focus {
+//       background-color: #2196f3;
+//       color: var(--primary-bg-color);
+//     }
+//   }
+// }
+
+// .employees-soc-icon {
+//   fill: currentColor;
+// }
