--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -13,13 +13,14 @@
   display: block;
   align-items: center;
   justify-content: center;
+  text-align: center;
 }
 
 .footer-contacts {
   display: block;
   margin-top: 20px;
   &__item:not(:last-child) {
-    margin-bottom: 9px;
+    margin-bottom: 8px;
   }
 }
 
@@ -38,8 +39,9 @@
   display: block;
   align-items: center;
   justify-content: flex-start;
+  text-align: center;
 
-  margin-bottom: 10px;
+  margin-bottom: 20px;
   font-weight: 700;
   font-size: 14px;
   line-height: 1.14;
@@ -52,7 +54,9 @@
   display: block;
   align-items: center;
   justify-content: center;
-  margin-left: 70px;
+  text-align: center;
+  margin-top: 60px;
+  // margin-left: 70px;
   &__list {
     display: flex;
     justify-content: center;
