--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -1,3 +1,35 @@
+.hero {
+  background-color: #2f303a;
+  background-image: linear-gradient(
+      rgba(47, 48, 58, 0.4),
+      rgba(47, 48, 58, 0.4)
+    ),
+    url(../images/hero-bg\ .jpg);
+  max-width: 1600px;
+  margin: 0 auto;
+  background-repeat: no-repeat;
+  background-position: center;
+
+  padding-top: 118px;
+  padding-bottom: 118px;
+}
+
+.hero-title {
+  font-weight: 900;
+  font-size: 26px;
+  line-height: 1.61;
+  text-align: center;
+  letter-spacing: 0.06em;
+  text-transform: uppercase;
+  color: #ffffff;
+
+  width: 360px;
+  height: 84px;
+  align-items: center;
+  margin: auto;
+  margin-bottom: 30px;
+}
+
 // .hero {
 //   background-color: #2f303a;
 //   background-image: linear-gradient(
