--- a/sass/layout/_subscribe.scss
+++ b/sass/layout/_subscribe.scss
@@ -1,11 +1,12 @@
 .subscribe {
-  // margin-left: 93px;
+  margin-top: 60px;
   &__title {
     display: block;
     align-items: center;
     justify-content: flex-start;
+    text-align: center;
 
-    margin-bottom: 10px;
+    margin-bottom: 20px;
     font-weight: 700;
     font-size: 14px;
     line-height: 1.14;
@@ -27,7 +28,7 @@
   &__input {
     width: 100%;
     height: 50px;
-    margin-right: 12px;
+    margin-bottom: 20px;
     padding: 15px 16px;
 
     background: transparent;
