--- a/sass/layout/_employees.scss
+++ b/sass/layout/_employees.scss
@@ -5,6 +5,7 @@
 }
 
 .teammates-items {
+  margin: 0;
   @media screen and (min-width: 768px) {
     max-width: 768px;
 
@@ -13,7 +14,6 @@
     gap: 30px;
     justify-content: center;
   }
-  margin: 0;
 
   &__list {
     margin-bottom: 30px;
@@ -22,7 +22,8 @@
       0px 2px 1px rgba(0, 0, 0, 0.2);
 
     @media screen and (min-width: 768px) {
-      width: calc((100% - 2 * 30px) / 2);
+      max-width: 768px;
+      flex-basis: calc((100% - 2 * 30px) / 2);
     }
 
     // &:not(:last-child) {
