--- a/sass/layout/_about.scss
+++ b/sass/layout/_about.scss
@@ -1,3 +1,10 @@
+.about {
+  display: none;
+  @media screen and (min-width: 1200px) {
+    display: block;
+  }
+}
+
 .pic-items {
   display: flex;
   justify-content: space-between;
