--- a/sass/layout/_clients.scss
+++ b/sass/layout/_clients.scss
@@ -6,27 +6,25 @@
 .customer {
   display: flex;
   flex-wrap: wrap;
-  justify-content: center;
   gap: 30px;
   &__item {
     width: 100%;
-    flex-basis: calc((100% - 2 * 30px) / 2);
+    flex-basis: calc((100% - 30px) / 2);
     @media screen and (min-width: 768px) {
       max-width: 768px;
-      flex-basis: calc((100% - 3 * 30px) / 3);
+      flex-basis: calc((100% - 60px) / 3);
+    }
+    @media screen and (min-width: 1200px) {
+      // max-width: 1200px;
+      flex-basis: calc((100% - 150px) / 6);
     }
   }
   &__icon {
-    @media screen and (min-width: 768px) {
-      max-width: 768px;
-      width: 226px;
-    }
-
     display: flex;
     justify-content: center;
     align-items: center;
 
-    width: 210px;
+    // width: 210px;
     height: 92px;
     fill: #afb1b8;
     border: 1px solid #afb1b8;
