--- a/sass/layout/_employees.scss
+++ b/sass/layout/_employees.scss
@@ -6,14 +6,14 @@
 
 .teammates-items {
   margin: 0;
-  @media screen and (min-width: 768px) {
-    max-width: 768px;
-
-    display: flex;
-    flex-wrap: wrap;
-    gap: 30px;
-    justify-content: center;
-  }
+  display: flex;
+  flex-wrap: wrap;
+  gap: 30px;
+  // @media screen and (min-width: 768px) {
+  //   display: flex;
+  //   flex-wrap: wrap;
+  //   gap: 30px;
+  // }
 
   &__list {
     margin-bottom: 30px;
@@ -22,8 +22,13 @@
       0px 2px 1px rgba(0, 0, 0, 0.2);
 
     @media screen and (min-width: 768px) {
-      max-width: 768px;
-      flex-basis: calc((100% - 2 * 30px) / 2);
+      // max-width: 768px;
+      margin: 0;
+      flex-basis: calc((100% - 2 * 15px) / 2);
+    }
+    @media screen and (min-width: 1200px) {
+      // max-width: 1200px;
+      flex-basis: calc((100% - 90px) / 4);
     }
 
     // &:not(:last-child) {
