--- a/sass/layout/_exemples.scss
+++ b/sass/layout/_exemples.scss
@@ -1,3 +1,39 @@
+.exemples {
+  // display: flex;
+  // flex-wrap: wrap;
+  // gap: 30px;
+
+  @media screen and (min-width: 480px) {
+    // max-width: 480px;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 30px;
+  }
+
+  &__card {
+    // flex-basis: calc(100% / 3 - 30px);
+    // margin-bottom: 30px;
+    width: 100%;
+    @media screen and (min-width: 768px) {
+      // max-width: 768px;
+      display: flex;
+      flex-wrap: wrap;
+      margin: 0;
+      flex-basis: calc((100% - 2 * 15px) / 2);
+    }
+    border: 1px solid #eeeeee;
+    cursor: pointer;
+    &:hover .exemples-hover-text {
+      transform: translateY(0);
+    }
+    &:hover,
+    &:focus {
+      box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12),
+        0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+    }
+  }
+}
+
 .sample-caption {
   padding-top: 20px;
   padding-bottom: 20px;
@@ -20,27 +56,6 @@
   color: var(--primary-text-color);
 }
 
-.exemples {
-  display: flex;
-  flex-wrap: wrap;
-  margin: -15px;
-
-  &__card {
-    flex-basis: calc(100% / 3 - 30px);
-    margin: 15px;
-    border: 1px solid #eeeeee;
-    cursor: pointer;
-    &:hover .exemples-hover-text {
-      transform: translateY(0);
-    }
-    &:hover,
-    &:focus {
-      box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12),
-        0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
-    }
-  }
-}
-
 .exemples-hover-wrap {
   position: relative;
   overflow: hidden;
@@ -61,3 +76,67 @@
   transform: translateY(100%);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
+// .sample-caption {
+//   padding-top: 20px;
+//   padding-bottom: 20px;
+//   padding-left: 24px;
+//   padding-right: 24px;
+//   /* border: 1px solid #EEEEEE; */
+// }
+
+// .exemple-caption {
+//   font-size: 18px;
+//   line-height: 2;
+//   color: var(--tittle-text-color);
+//   letter-spacing: 0.06em;
+// }
+
+// .exemple-type {
+//   font-size: 16px;
+//   line-height: 1.88;
+//   letter-spacing: 0.03em;
+//   color: var(--primary-text-color);
+// }
+
+// .exemples {
+//   display: flex;
+//   flex-wrap: wrap;
+//   margin: -15px;
+
+//   &__card {
+//     flex-basis: calc(100% / 3 - 30px);
+//     margin: 15px;
+//     border: 1px solid #eeeeee;
+//     cursor: pointer;
+//     &:hover .exemples-hover-text {
+//       transform: translateY(0);
+//     }
+//     &:hover,
+//     &:focus {
+//       box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12),
+//         0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+//     }
+//   }
+// }
+
+// .exemples-hover-wrap {
+//   position: relative;
+//   overflow: hidden;
+// }
+
+// .exemples-hover-text {
+//   position: absolute;
+//   top: 0;
+//   font-style: normal;
+//   font-size: 18px;
+//   color: var(--primary-bg-color);
+//   line-height: 1.55;
+//   font-weight: 400;
+//   background-color: rgba(33, 150, 243, 0.9);
+//   padding: 64px 24px;
+//   height: 100%;
+
+//   transform: translateY(100%);
+//   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+// }
