--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -5,8 +5,13 @@
 }
 
 .container.footer {
-  max-width: 100%;
   align-items: baseline;
+  @media screen and (min-width: 768px) {
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    align-items: baseline;
+  }
 }
 
 .container-footer {
@@ -57,6 +62,9 @@
   text-align: center;
   margin-top: 60px;
   // margin-left: 70px;
+  @media screen and (min-width: 768px) {
+    margin: 0;
+  }
   &__list {
     display: flex;
     justify-content: center;
