--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,5 +1,14 @@
 /* ------site nav------ */
 .nav__menu {
+  @media screen and (min-width: 480px) {
+    display: none;
+  }
+  @media screen and (min-width: 768px) {
+    display: none;
+  }
+  @media screen and (min-width: 1200px) {
+    display: flex;
+  }
   display: flex;
   align-items: center;
   margin: 0;
@@ -114,6 +123,15 @@
 }
 
 .header-contacts {
+  @media screen and (min-width: 480px) {
+    display: none;
+  }
+  @media screen and (min-width: 768px) {
+    display: none;
+  }
+  @media screen and (min-width: 1200px) {
+    display: flex;
+  }
   display: flex;
   margin: 0;
   margin-left: auto;
