--- a/sass/layout/_portfolio-hero.scss
+++ b/sass/layout/_portfolio-hero.scss
@@ -1,8 +1,35 @@
 .menu-list {
-  display: flex;
-  justify-content: center;
-  margin-bottom: 50px;
-  &__item:not(:last-child) {
-    margin-right: 8px;
+  @media screen and (min-width: 480px) {
+    // max-width: 480px;
+    display: flex;
+    flex-wrap: wrap;
+    row-gap: 15px;
+    justify-content: flex-start;
+    padding-bottom: 40px;
+    &__item {
+      margin-right: 8px;
+      // @media screen and (min-width: 768px) {
+      //   margin-bottom: 0;
+      // }
+    }
+  }
+
+  @media screen and (min-width: 768px) {
+    max-width: 768px;
+    display: flex;
+    justify-content: center;
+    padding-bottom: 30px;
+    &__item:not(:last-child) {
+      margin-right: 8px;
+    }
   }
 }
+
+// .menu-list {
+//   display: flex;
+//   justify-content: center;
+//   margin-bottom: 50px;
+//   &__item:not(:last-child) {
+//     margin-right: 8px;
+//   }
+// }
