--- a/sass/layout/_subscribe.scss
+++ b/sass/layout/_subscribe.scss
@@ -17,8 +17,14 @@
 }
 
 .send-icon {
+  @media screen and (min-width: 480px) {
+    right: 156px;
+  }
+  @media screen and (min-width: 768px) {
+    right: 156px;
+  }
   position: absolute;
-  right: 156px;
+  right: 76px;
   top: 50%;
   transform: translateY(-50%);
 }
@@ -26,6 +32,12 @@
 .form {
   // display: flex;
   &__input {
+    @media screen and (min-width: 480px) {
+      width: 450px;
+    }
+    @media screen and (min-width: 768px) {
+      width: 450px;
+    }
     width: 100%;
     height: 50px;
     margin-bottom: 20px;
