--- a/css/main.css
+++ b/css/main.css
@@ -229,14 +229,14 @@ img {
           align-items: center;
   margin: 0;
 }
-@media screen and (min-width: 480px) {
+@media screen and (max-width: 767px) {
   .nav__menu {
     display: none;
   }
 }
 @media screen and (min-width: 768px) {
   .nav__menu {
-    display: none;
+    margin-left: 88px;
   }
 }
 @media screen and (min-width: 1200px) {
@@ -244,6 +244,7 @@ img {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
+    margin-left: 93px;
   }
 }
 .nav__menu .link {
@@ -346,24 +347,15 @@ img {
   display: flex;
 }
 
-.header-contacts {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  margin: 0;
-  margin-left: auto;
-  -webkit-box-pack: end;
-      -ms-flex-pack: end;
-          justify-content: end;
-}
-@media screen and (min-width: 480px) {
+@media screen and (max-width: 767px) {
   .header-contacts {
     display: none;
   }
 }
 @media screen and (min-width: 768px) {
   .header-contacts {
-    display: none;
+    display: block;
+    margin-left: 84px;
   }
 }
 @media screen and (min-width: 1200px) {
@@ -371,6 +363,11 @@ img {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
+    margin: 0;
+    margin-left: auto;
+    -webkit-box-pack: end;
+        -ms-flex-pack: end;
+            justify-content: end;
   }
 }
 
@@ -381,9 +378,6 @@ img {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
   content: "";
   margin-left: 10px;
   background-color: #fff;
@@ -395,6 +389,11 @@ img {
   color: var(--primary-text-color);
   -webkit-transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+@media screen and (min-width: 768px) {
+  .contact-list-header {
+    margin-bottom: 10px;
+  }
 }
 .contact-list-header:hover, .contact-list-header:focus {
   color: var(--accent-color);
@@ -768,6 +767,13 @@ img {
         justify-content: space-around;
     -ms-flex-wrap: wrap;
         flex-wrap: wrap;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .container.footer {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
     -webkit-box-align: baseline;
         -ms-flex-align: baseline;
             align-items: baseline;
@@ -783,6 +789,11 @@ img {
       -ms-flex-pack: center;
           justify-content: center;
   text-align: center;
+}
+@media screen and (min-width: 1200px) {
+  .container-footer {
+    text-align: start;
+  }
 }
 
 .footer-contacts {
@@ -820,6 +831,11 @@ img {
   text-transform: uppercase;
   color: var(--primary-bg-color);
 }
+@media screen and (min-width: 1200px) {
+  .footer-soc__title {
+    text-align: start;
+  }
+}
 
 .footer-soc {
   display: block;
@@ -835,6 +851,11 @@ img {
 @media screen and (min-width: 768px) {
   .footer-soc {
     margin: 0;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .footer-soc {
+    margin-left: 70px;
   }
 }
 .footer-soc__list {
@@ -880,6 +901,12 @@ img {
 .subscribe {
   margin-top: 60px;
 }
+@media screen and (min-width: 1200px) {
+  .subscribe {
+    margin-left: 93px;
+    margin-top: 0;
+  }
+}
 .subscribe__title {
   display: block;
   -webkit-box-align: center;
@@ -896,6 +923,12 @@ img {
   letter-spacing: 0.03em;
   text-transform: uppercase;
   color: var(--primary-bg-color);
+}
+@media screen and (min-width: 1200px) {
+  .subscribe__title {
+    text-align: start;
+    margin-bottom: 10px;
+  }
 }
 
 .send-icon {
@@ -915,7 +948,19 @@ img {
     right: 156px;
   }
 }
+@media screen and (min-width: 1200px) {
+  .send-icon {
+    right: 28px;
+  }
+}
 
+@media screen and (min-width: 1200px) {
+  .form {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+}
 .form__input {
   width: 100%;
   height: 50px;
@@ -939,6 +984,15 @@ img {
 @media screen and (min-width: 768px) {
   .form__input {
     width: 450px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .form__input {
+    width: 358px;
+    height: 50px;
+    margin-right: 12px;
+    margin-bottom: 0;
+    padding: 15px 16px;
   }
 }
 
@@ -1199,6 +1253,14 @@ img {
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
 } */
+.exemples {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  gap: 30px;
+}
 @media screen and (min-width: 480px) {
   .exemples {
     display: -webkit-box;
@@ -1216,14 +1278,14 @@ img {
 }
 @media screen and (min-width: 768px) {
   .exemples__card {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -ms-flex-wrap: wrap;
-        flex-wrap: wrap;
-    margin: 0;
     -ms-flex-preferred-size: calc((100% - 30px) / 2);
         flex-basis: calc((100% - 30px) / 2);
+  }
+}
+@media screen and (min-width: 1200px) {
+  .exemples__card {
+    -ms-flex-preferred-size: calc((100% - 60px) / 3);
+        flex-basis: calc((100% - 60px) / 3);
   }
 }
 .exemples__card:hover .exemples-hover-text {
@@ -1300,7 +1362,6 @@ img {
 }
 @media screen and (min-width: 768px) {
   .menu-list {
-    max-width: 768px;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -1308,6 +1369,21 @@ img {
         -ms-flex-pack: center;
             justify-content: center;
     padding-bottom: 30px;
+  }
+  .menu-list__item:not(:last-child) {
+    margin-right: 8px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .menu-list {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    padding-bottom: 50px;
   }
   .menu-list__item:not(:last-child) {
     margin-right: 8px;
