--- a/sass/layout/_exemples.scss
+++ b/sass/layout/_exemples.scss
@@ -1,10 +1,9 @@
 .exemples {
-  // display: flex;
-  // flex-wrap: wrap;
-  // gap: 30px;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 30px;
 
   @media screen and (min-width: 480px) {
-    // max-width: 480px;
     display: flex;
     flex-wrap: wrap;
     gap: 30px;
@@ -15,11 +14,11 @@
     // margin-bottom: 30px;
     width: 100%;
     @media screen and (min-width: 768px) {
-      // max-width: 768px;
-      display: flex;
-      flex-wrap: wrap;
-      margin: 0;
       flex-basis: calc((100% - 2 * 15px) / 2);
+    }
+
+    @media screen and (min-width: 1200px) {
+      flex-basis: calc((100% - 60px) / 3);
     }
     border: 1px solid #eeeeee;
     cursor: pointer;
