--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -10,6 +10,10 @@
     display: flex;
     justify-content: space-around;
     flex-wrap: wrap;
+    // align-items: baseline;
+  }
+  @media screen and (min-width: 1200px) {
+    display: flex;
     align-items: baseline;
   }
 }
@@ -19,6 +23,9 @@
   align-items: center;
   justify-content: center;
   text-align: center;
+  @media screen and (min-width: 1200px) {
+    text-align: start;
+  }
 }
 
 .footer-contacts {
@@ -53,6 +60,9 @@
   letter-spacing: 0.03em;
   text-transform: uppercase;
   color: var(--primary-bg-color);
+  @media screen and (min-width: 1200px) {
+    text-align: start;
+  }
 }
 
 .footer-soc {
@@ -61,9 +71,12 @@
   justify-content: center;
   text-align: center;
   margin-top: 60px;
-  // margin-left: 70px;
+
   @media screen and (min-width: 768px) {
     margin: 0;
+  }
+  @media screen and (min-width: 1200px) {
+    margin-left: 70px;
   }
   &__list {
     display: flex;
