--- a/sass/layout/_portfolio-hero.scss
+++ b/sass/layout/_portfolio-hero.scss
@@ -1,6 +1,5 @@
 .menu-list {
   @media screen and (min-width: 480px) {
-    // max-width: 480px;
     display: flex;
     flex-wrap: wrap;
     row-gap: 15px;
@@ -15,7 +14,6 @@
   }
 
   @media screen and (min-width: 768px) {
-    max-width: 768px;
     display: flex;
     justify-content: center;
     padding-bottom: 30px;
@@ -25,11 +23,13 @@
   }
 }
 
-// .menu-list {
-//   display: flex;
-//   justify-content: center;
-//   margin-bottom: 50px;
-//   &__item:not(:last-child) {
-//     margin-right: 8px;
-//   }
-// }
+.menu-list {
+  @media screen and (min-width: 1200px) {
+    display: flex;
+    justify-content: center;
+    padding-bottom: 50px;
+    &__item:not(:last-child) {
+      margin-right: 8px;
+    }
+  }
+}
