--- a/sass/layout/_subscribe.scss
+++ b/sass/layout/_subscribe.scss
@@ -1,12 +1,21 @@
 .subscribe {
   margin-top: 60px;
+  @media screen and (min-width: 1200px) {
+    margin-left: 93px;
+    margin-top: 0;
+  }
   &__title {
     display: block;
     align-items: center;
     justify-content: flex-start;
     text-align: center;
-
     margin-bottom: 20px;
+
+    @media screen and (min-width: 1200px) {
+      text-align: start;
+      margin-bottom: 10px;
+    }
+
     font-weight: 700;
     font-size: 14px;
     line-height: 1.14;
@@ -17,20 +26,27 @@
 }
 
 .send-icon {
+  position: absolute;
+  right: 76px;
+  top: 50%;
+  transform: translateY(-50%);
+
   @media screen and (min-width: 480px) {
     right: 156px;
   }
   @media screen and (min-width: 768px) {
     right: 156px;
   }
-  position: absolute;
-  right: 76px;
-  top: 50%;
-  transform: translateY(-50%);
+  @media screen and (min-width: 1200px) {
+    right: 28px;
+  }
 }
 
 .form {
-  // display: flex;
+  @media screen and (min-width: 1200px) {
+    display: flex;
+  }
+
   &__input {
     @media screen and (min-width: 480px) {
       width: 450px;
@@ -38,6 +54,14 @@
     @media screen and (min-width: 768px) {
       width: 450px;
     }
+    @media screen and (min-width: 1200px) {
+      width: 358px;
+      height: 50px;
+      margin-right: 12px;
+      margin-bottom: 0;
+      padding: 15px 16px;
+    }
+
     width: 100%;
     height: 50px;
     margin-bottom: 20px;
