--- a/sass/layout/_employees.scss
+++ b/sass/layout/_employees.scss
@@ -5,17 +5,24 @@
 }
 
 .teammates-items {
+  width: auto;
   margin: 0;
   display: flex;
   flex-wrap: wrap;
-  gap: 30px;
   // @media screen and (min-width: 768px) {
   //   display: flex;
   //   flex-wrap: wrap;
   //   gap: 30px;
   // }
+  @media screen and (min-width: 768px) {
+    gap: 30px;
+  }
+  @media screen and (min-width: 1200px) {
+    gap: 30px;
+  }
 
   &__list {
+    width: 100%;
     margin-bottom: 30px;
     background-color: var(--primary-bg-color);
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
@@ -24,7 +31,7 @@
     @media screen and (min-width: 768px) {
       // max-width: 768px;
       margin: 0;
-      flex-basis: calc((100% - 2 * 15px) / 2);
+      flex-basis: calc((100% - 30px) / 2);
     }
     @media screen and (min-width: 1200px) {
       // max-width: 1200px;
