--- a/sass/components/_titles.scss
+++ b/sass/components/_titles.scss
@@ -11,15 +11,52 @@
 //   margin-bottom: 50px;
 // }
 
-.about-title,
 .team-title,
 .section-title {
   font-style: normal;
   font-weight: 700;
   font-size: 28px;
-  line-height: 1.8;
+  line-height: 1.18;
   text-align: center;
   letter-spacing: 0.03em;
   color: var(--tittle-text-color);
   margin-bottom: 30px;
+
+  @media screen and (min-width: 768px) {
+    font-style: normal;
+    font-weight: 700;
+    font-size: 28px;
+    line-height: 1.18;
+    text-align: center;
+    letter-spacing: 0.03em;
+    color: var(--tittle-text-color);
+    margin-bottom: 30px;
+  }
+
+  @media screen and (min-width: 1200px) {
+    font-style: normal;
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 1.17;
+    text-align: center;
+    letter-spacing: 0.03em;
+    color: var(--tittle-text-color);
+    margin-bottom: 50px;
+  }
+
+  // @media screen and (min-width: 480px) {
+  //   font-size: 28px;
+  //   line-height: 1.18;
+  // }
+}
+
+.about-title {
+  font-style: normal;
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.17;
+  text-align: center;
+  letter-spacing: 0.03em;
+  color: var(--tittle-text-color);
+  margin-bottom: 50px;
 }
