--- a/css/main.css
+++ b/css/main.css
@@ -88,6 +88,16 @@ img {
   padding-top: 60px;
   padding-bottom: 60px;
 }
+@media screen and (min-width: 320px) {
+  .features {
+    padding-bottom: 30px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .features {
+    padding-bottom: 60px;
+  }
+}
 @media screen and (min-width: 1200px) {
   .features {
     padding-top: 94px;
@@ -206,17 +216,53 @@ img {
           box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
-.about-title,
 .team-title,
 .section-title {
   font-style: normal;
   font-weight: 700;
   font-size: 28px;
-  line-height: 1.8;
+  line-height: 1.18;
   text-align: center;
   letter-spacing: 0.03em;
   color: var(--tittle-text-color);
   margin-bottom: 30px;
+}
+@media screen and (min-width: 768px) {
+  .team-title,
+.section-title {
+    font-style: normal;
+    font-weight: 700;
+    font-size: 28px;
+    line-height: 1.18;
+    text-align: center;
+    letter-spacing: 0.03em;
+    color: var(--tittle-text-color);
+    margin-bottom: 30px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .team-title,
+.section-title {
+    font-style: normal;
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 1.17;
+    text-align: center;
+    letter-spacing: 0.03em;
+    color: var(--tittle-text-color);
+    margin-bottom: 50px;
+  }
+}
+
+.about-title {
+  font-style: normal;
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.17;
+  text-align: center;
+  letter-spacing: 0.03em;
+  color: var(--tittle-text-color);
+  margin-bottom: 50px;
 }
 
 /* ------site nav------ */
@@ -787,6 +833,22 @@ img {
   padding-top: 60px;
   padding-bottom: 60px;
 }
+@media screen and (min-width: 320px) {
+  .employees {
+    padding-bottom: 30px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .employees {
+    padding-bottom: 60px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .employees {
+    padding-bottom: 94px;
+    padding-top: 94px;
+  }
+}
 
 .teammates-items {
   width: auto;
@@ -895,7 +957,13 @@ img {
 
 .clients {
   padding-top: 60px;
-  padding-bottom: 94px;
+  padding-bottom: 60px;
+}
+@media screen and (min-width: 1200px) {
+  .clients {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
 }
 
 .customer {
@@ -1574,21 +1642,6 @@ img {
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-@media screen and (max-width: 479px) {
-  .menu-list {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -ms-flex-wrap: wrap;
-        flex-wrap: wrap;
-    -webkit-box-pack: start;
-        -ms-flex-pack: start;
-            justify-content: flex-start;
-  }
-  .menu-list__item {
-    margin: 5px;
-  }
-}
 @media screen and (min-width: 480px) {
   .menu-list {
     display: -webkit-box;
