--- a/sass/layout/_employees.scss
+++ b/sass/layout/_employees.scss
@@ -2,6 +2,16 @@
   background-color: #f5f4fa;
   padding-top: 60px;
   padding-bottom: 60px;
+  @media screen and (min-width: 320px) {
+    padding-bottom: 30px;
+  }
+  @media screen and (min-width: 768px) {
+    padding-bottom: 60px;
+  }
+  @media screen and (min-width: 1200px) {
+    padding-bottom: 94px;
+    padding-top: 94px;
+  }
 }
 
 .teammates-items {
