--- a/sass/layout/_portfolio-hero.scss
+++ b/sass/layout/_portfolio-hero.scss
@@ -1,12 +1,12 @@
 .menu-list {
-  @media screen and (max-width: 479px) {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: flex-start;
-    &__item {
-      margin: 5px;
-    }
-  }
+  // @media screen and (max-width: 479px) {
+  //   display: flex;
+  //   flex-wrap: wrap;
+  //   justify-content: flex-start;
+  //   &__item {
+  //     margin: 5px;
+  //   }
+  // }
 
   @media screen and (min-width: 480px) {
     display: flex;
